# financial-data-reliability-platform

./: .Rhistory  .gitignore  ml_feature_importance_safe.csv  ml_risk_model_report_safe.json  ml_risk_model_safe.joblib  pyproject.toml  requirements-r.txt  requirements.txt
ai/: ai_action_recommender.py  ai_daily_summary_runner.py  llm_incident_reasoner.py
configs/: finance_bank_metric_mapping.yaml  format_meta_default.yaml  metric_event_mapping.yaml
dashboards/: grafana_ai_incident_dashboard_mariadb_v2.json  grafana_data_reliability_control_v6_fixed.json  grafana_ml_backfill_prediction_monitoring_v2.json
deploy/: reset_ai_layer_tables.sh  reset_test_tables_v2.sh  run_ai_layer_pipeline.sh  run_full_backfill_pipeline.sh  run_ml_backfill_pipeline_v2.sh  run_scenario_matrix.sh  run_scenario_test_pipeline.sh  scenario_matrix_20260101_20260331.csv
docs/: funnel_definition.md  metric_contract.md  root_cause_action_playbook.md
ml/: ML_FEATURE_SCHEMA.md  ml_feature_drift_analyzer.py  ml_feature_importance.csv  ml_feature_importance_loader.py  ml_feature_vector_builder.py  ml_prediction_runner.py  ml_risk_model.joblib  ml_risk_model_report.json  ml_risk_model_train.py
pipelines/: action_engine_runner.py  action_engine_runner_v2.py  analyzer_b_v4.py  collector_a.py  collector_a_v2.py  correlation_anomaly_runner.py  db_utils.py  load_tsv_to_db.py  load_tsv_to_db_v2.py  load_webserver_log.sh  mapping_coverage_runner.py  parse_webserver_log.py  parse_webserver_log.sh  parse_webserver_log_fast.py  risk_score_day_v4_runner.py  risk_score_runner_v2.py  root_cause_analyzer.py  (+4 more)
(+114 files in other folders)
